@@ -621,13 +621,13 @@
     <p class=issue>The FXTF is looking into distinguish between vertical and horizontal blur radii.</p>
   </dd>
 
-  <dt><dfn>drop-shadow(&lt;shadow&gt;)</dfn></dt>
+  <dt><dfn>drop-shadow([&lt;length&gt;{2,3} && &lt;color&gt;?]#)</dfn></dt>
   <dd>
     Applies a drop shadow effect to the input image. A drop shadow is
     effectively a blurred, offset version of the input image's alpha mask
-    drawn in a particular color, composited below the image. The function
-    accepts a parameter of type &lt;shadow&gt; (defined in CSS3 Backgrounds),
-    with the exception that the 'inset' keyword is not allowed. The markup
+    drawn in a particular color, composited below the image. Values are interpreted
+    as for 'box-shadow' [[!CSS3BG]]. (But note that spread values are not allowed.)
+    The markup
     equivalent of this function is <a href="#dropshadowEquivalent">given
     below</a>.
     <p class=issue>The FXTF is looking into allowing multiple drop shadows.</p>
