@@ -1026,8 +1026,7 @@
    href="#brightnessltnumbergt-ltpercentagegt"><var>brightness(&lt;number&gt; | &lt;percentage&gt;)</var></a>
  | <a
    href="#contrastltnumbergt-ltpercentagegt"><var>contrast(&lt;number&gt; | &lt;percentage&gt;)</var></a> | <a
-   href="#blurltlengthgt"><var>blur(&lt;length&gt;)</var></a> | <a
-   href="#drop-shadowltshadowgt"><var>drop-shadow(&lt;shadow&gt;)</var></a>
+   href="#blurltlengthgt"><var>blur(&lt;length&gt;)</var></a> | <var>drop-shadow(&lt;shadow&gt;)</var>
  | <a
    href="#customident-ltparamgt"><var>custom(IDENT [, &lt;param&gt;]*)</var></a></pre>
 
@@ -1148,15 +1147,17 @@
     <p class=issue>The FXTF is looking into distinguish between vertical and
      horizontal blur radii.
 
-   <dt><dfn id=drop-shadowltshadowgt>drop-shadow(&lt;shadow&gt;)</dfn>
+   <dt><dfn
+    id=drop-shadowltlengthgt23-ltcolorgt>drop-shadow([&lt;length&gt;{2,3} &&
+    &lt;color&gt;?]#)</dfn>
 
    <dd> Applies a drop shadow effect to the input image. A drop shadow is
     effectively a blurred, offset version of the input image's alpha mask
-    drawn in a particular color, composited below the image. The function
-    accepts a parameter of type &lt;shadow&gt; (defined in CSS3 Backgrounds),
-    with the exception that the ‘<code class=property>inset</code>’
-    keyword is not allowed. The markup equivalent of this function is <a
-    href="#dropshadowEquivalent">given below</a>.
+    drawn in a particular color, composited below the image. Values are
+    interpreted as for ‘<code class=property>box-shadow</code>’ <a
+    href="#CSS3BG" rel=biblioentry>[CSS3BG]<!--{{!CSS3BG}}--></a>. (But note
+    that spread values are not allowed.) The markup equivalent of this
+    function is <a href="#dropshadowEquivalent">given below</a>.
     <p class=issue>The FXTF is looking into allowing multiple drop shadows.
 
    <dt><dfn id=customident-ltparamgt>custom(IDENT [, &lt;param&gt;]*)</dfn>
@@ -15444,6 +15445,16 @@ interface <b>SVGFEBlendElement</b> : <a
        </dd>
        <!---->
 
+       <dt id=CSS3BG>[CSS3BG]
+
+       <dd>Bert Bos; Elika J. Etemad; Brad Kemper. <a
+        href="http://www.w3.org/TR/2012/CR-css3-background-20120724/"><cite>CSS
+        Backgrounds and Borders Module Level 3.</cite></a> 24 July 2012. W3C
+        Candidate Recommendation. (Work in progress.) URL: <a
+        href="http://www.w3.org/TR/2012/CR-css3-background-20120724/">http://www.w3.org/TR/2012/CR-css3-background-20120724/</a>
+       </dd>
+       <!---->
+
        <dt id=CSS3COLOR>[CSS3COLOR]
 
        <dd>Tantek Çelik; Chris Lilley; L. David Baron. <a
@@ -16143,7 +16154,8 @@ interface <b>SVGFEBlendElement</b> : <a
        <li>‘<a href="#detached"><code class=css>detached</code></a>’, <a
         href="#detached" title="section 11.5."><strong>11.5.</strong></a>
 
-       <li>drop-shadow(&lt;shadow&gt;), <a href="#drop-shadowltshadowgt"
+       <li>drop-shadow([&lt;length&gt;{2,3} && &lt;color&gt;?]#), <a
+        href="#drop-shadowltlengthgt23-ltcolorgt"
         title="section 5."><strong>5.</strong></a>
 
        <li>enable-background, <a href="#enable-background"
