@@ -1,6 +1,10 @@
 Changes for Filter Effects specification
 ----------------------------------------
 
+2013-02-27  Dirk Schulze  <dschulze@adobe.com>
+- Fix issues with drop-shadow.
+  (https://www.w3.org/Bugs/Public/show_bug.cgi?id=20762)
+
 2013-02-26  Dirk Schulze  <dschulze@adobe.com>
 - Enable automatic line break for math formulas.
 
